test/sematest/invalid/InvalidNew.java

class InvalidNew {

	
	public static void main(String[] args) {
		Type1 type1=new Type2();
		Type2 type2=new Type1();		
	}
}

class Type1{
	
}

class Type2{
	
}
